--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,6 @@ i {
    z-index: 1;
 }
 
-
 .front-content,
 .back-content {
    width: 100%;
@@ -109,9 +108,13 @@ i {
 }
 
 /* Paper Flipped */
-.flipped .front,
-.flipped .back {
+.flipped.front,
+.flipped + .back {
    transform: rotateY(-180deg)
+}
+
+.flipped + .front {
+   visibility: visible;
 }
 
 /* Customization */
